rate limit and azure

--- a/Secure_API/appsettings.json
+++ b/Secure_API/appsettings.json
@@ -9,6 +9,6 @@
   "Jwt": {
     "SekretKey": "Key used to encrypt and decrypt jwt, this should be long and complicated!",
     "Issuer": "olli",
-    "Audience": "olli"
+    "Audience": "*"
   }
 }
